--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css">
     <base href="/">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>내 맘대로 쓰는 메모장</title>
   </head>
   <body>
     <noscript>
