아이콘 햄버거변경

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.1/css/bootstrap.min.css">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    
     <base href="/">
     <title>내 맘대로 쓰는 메모장</title>
   </head>
