--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     
     
     <base href="/">
-    <title>내 맘대로 쓰는 메모장</title>
+    <title>친구처럼 톡하자</title>
   </head>
   <body>
     <noscript>
