--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="친구처럼채팅">
+    <!-- robots 처리 -->
+    <meta name="Robots" content="index,follow">
+    <meta name="Yeti" content="index,follow">
+    <meta name="Googlebot" content="index,follow">
+    <meta name="Googlebot-Image" content="index,follow">
+    <meta name="Daumoa" content="index,follow">
+    <meta name="adsBot-Google" content="index,follow">
+    <!-- robots 처리 -->
     <meta name="naver-site-verification" content="db8ed6f1c250dd07b4c5856dbb6cb42f948484cd" />
     <meta name="google-site-verification" content="fcVpX2XBs4hQRi0xTDy5GcRVNnSbb2cmzWcy-diyFn4" />
     <link rel="shortcut icon" href="/main_logo.png" type="image/x-icon">
