오픈그래프 추가

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,13 @@
     <meta name="Daumoa" content="index,follow">
     <meta name="adsBot-Google" content="index,follow">
     <!-- robots 처리 -->
+    <!-- 오픈그래프 -->
+    <meta property="og:type" content="website"> 
+    <meta property="og:title" content="친톡">
+    <meta property="og:description" content="친구또는이성친구와채팅">
+    <meta property="og:image" content="/main_logo.png">
+    <meta property="og:url" content="https://web-frontend-rt92alk916cxb.sel4.cloudtype.app">
+    <!-- 오픈그래프 -->
     <meta name="naver-site-verification" content="db8ed6f1c250dd07b4c5856dbb6cb42f948484cd" />
     <meta name="google-site-verification" content="fcVpX2XBs4hQRi0xTDy5GcRVNnSbb2cmzWcy-diyFn4" />
     <link rel="shortcut icon" href="/main_logo.png" type="image/x-icon">
