--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <!-- 오픈그래프 -->
     <meta name="naver-site-verification" content="5de3c0a2caecb61908631af09add8e0026459c56" />
     <meta name="google-site-verification" content="s6TFP9PG9oMWMWzlIW-8r4T7egkHzQ4Yn8w0C1CtTCA" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4150138337602380"
+     crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/main_logo.png" type="image/x-icon">
     <link rel="icon" href="/main_logo.png" type="image/x-icon">
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
