--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="description" content="친구처럼채팅">
+    <meta name="description" content="ㅡ회원가입만 하면 무료로 채팅이용이 가능합니다. 다양한 친구들을 만들어보세요.">
 
     <!-- 오픈그래프 -->
     <meta property="og:type" content="website"> 
-    <meta property="og:title" content="친톡">
-    <meta property="og:description" content="친구또는이성친구와채팅">
+    <meta property="og:title" content="친톡 - 무료채팅방 (랜덤채팅)">
+    <meta property="og:description" content="친구 또는 이성친구와 채팅">
     <meta property="og:image" content="/main_logo.png">
-    <meta property="og:url" content="https://web-frontend-rt92alk916cxb.sel4.cloudtype.app">
+    <meta property="og:url" content="https://www.friendtalk.shop/">
     <!-- 오픈그래프 -->
     <meta name="naver-site-verification" content="5de3c0a2caecb61908631af09add8e0026459c56" />
     <meta name="google-site-verification" content="s6TFP9PG9oMWMWzlIW-8r4T7egkHzQ4Yn8w0C1CtTCA" />
