딥링크수정

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script type="text/javascript" src="js/my-script.js"></script>
+    <script type="text/javascript" src="https://www.friendtalk.shop/js/my-script.js"></script>
   </body>
 </html>
