--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <!-- 오픈그래프 -->
     <meta property="og:type" content="website"> 
     <meta property="og:title" content="친톡 - 무료채팅방 (랜덤채팅)">
-    <meta property="og:description" content="친구 또는 이성친구와 채팅">
+    <meta property="og:description" content="무료로 채팅이용하세요">
     <meta property="og:image" content="/main_logo.png">
     <meta property="og:url" content="https://www.friendtalk.shop/">
     <!-- 오픈그래프 -->
