--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website"> 
     <meta property="og:title" content="친톡 - 무료채팅방 (랜덤채팅)">
     <meta property="og:description" content="무료로 채팅이용하세요">
-    <meta property="og:image" content="/main_logo.png">
+    <meta property="og:image" content="https://www.friendtalk.shop/main_logo.png">
     <meta property="og:url" content="https://www.friendtalk.shop/">
     <!-- 오픈그래프 -->
     <meta name="naver-site-verification" content="5de3c0a2caecb61908631af09add8e0026459c56" />
