--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <meta property="og:type" content="website"> 
     <meta property="og:title" content="친톡 - 무료채팅방 (랜덤채팅)">
     <meta property="og:description" content="무료로 채팅이용하세요">
-    <meta property="og:image" content="https://www.friendtalk.shop/main_logo.png">
-    <meta property="og:url" content="https://www.friendtalk.shop/">
+    <meta property="og:image" content="https://friendtalk.netlify.app/main_logo.png">
+    <meta property="og:url" content="https://friendtalk.netlify.app/">
     <!-- 오픈그래프 -->
     <meta name="naver-site-verification" content="5de3c0a2caecb61908631af09add8e0026459c56" />
     <meta name="google-site-verification" content="s6TFP9PG9oMWMWzlIW-8r4T7egkHzQ4Yn8w0C1CtTCA" />
@@ -36,6 +36,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script type="text/javascript" src="https://www.friendtalk.shop/js/my-script.js"></script>
+    <script type="text/javascript" src="https://friendtalk.netlify.app/js/my-script.js"></script>
   </body>
 </html>
